--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Calculator for designing beer recipes",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "test"
+    "start": "webpack --mode=development && jekyll s",
+    "build": "webpack --mode=production && jekyll build"
   },
   "author": "Andre LaFleur",
   "license": "GPL-3.0-or-later",
@@ -17,17 +18,20 @@
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-webpack": "^3.0.5",
     "react": "^16.8.6",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.8.6",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@babel/core": "^7.4.5"
-  },
-  "scripts": {
-  	"start": "webpack --mode=development && jekyll s",
-  	"build": "webpack --mode=production && jekyll build"
   }
 }
