--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react": "^16.8.6",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "style-loader": "^0.23.1",
     "testdouble": "^3.11.0",
     "webpack": "^4.32.2",
